--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
  <link rel="icon" type="image/png" sizes="32x32" href="/images/snake.png">
 </head>
 <body>
+    <div class="displayScoreContainer">
+    </div>
     <div class="displayContainer">
         <h2>Welcome to World of Snakes </h2>
     </div>
